apps/overlays/syd/service-homepage.yaml
apiVersion: v1
kind: Service
metadata:
  name: openspeedtest
  namespace: openspeedtest
  annotations:
    gethomepage.dev/href: https://speed.syd.excloo.dev
    gethomepage.dev/siteMonitor: https://speed.syd.excloo.dev
