apps/overlays/syd/anisette-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: anisette
  namespace: anisette
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    gethomepage.dev/description: Apple Anisette Data Service
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/href: https://anisette.excloo.com
    gethomepage.dev/icon: apple
    gethomepage.dev/name: Anisette
    gethomepage.dev/siteMonitor: https://anisette.excloo.com
  labels:
    app.kubernetes.io/name: anisette
    gateway.excloo.dev/public-access: "true"
spec:
  hostnames:
    - anisette.excloo.com
  parentRefs:
    - name: public-direct
      namespace: networking
      sectionName: websecuredirect
  rules:
    - backendRefs:
        - name: anisette
          port: 6969
