apps/overlays/syd/openspeedtest-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openspeedtest
  namespace: openspeedtest
  annotations:
    gethomepage.dev/description: Network Speed Test
    gethomepage.dev/enabled: "true"
    monitoring.excloo.dev/enabled: "true"
    gethomepage.dev/group: Servers
    gethomepage.dev/href: https://app.invalid
    gethomepage.dev/icon: openspeedtest
    gethomepage.dev/name: OpenSpeedTest
  labels:
    app.kubernetes.io/name: openspeedtest
spec:
  hostnames:
    - speed.syd.excloo.dev
  parentRefs:
    - name: private
      namespace: networking
  rules:
    - backendRefs:
        - name: openspeedtest
          port: 80
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: openspeedtest-buffering
