apps/overlays/syd/redlib-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redlib
  namespace: redlib
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    gethomepage.dev/description: Reddit Frontend
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Applications
    gethomepage.dev/href: https://reddit.excloo.com
    gethomepage.dev/icon: redlib
    gethomepage.dev/name: Redlib
    gethomepage.dev/siteMonitor: https://reddit.excloo.com
  labels:
    app.kubernetes.io/name: redlib
    gateway.excloo.dev/public-access: "true"
spec:
  hostnames:
    - reddit.excloo.com
  parentRefs:
    - name: public-tunnel
      namespace: networking
  rules:
    - backendRefs:
        - name: redlib
          port: 8080
